[package]
name = "revo-graph"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"
actix-files = "0.4.0"
chrono = "0.4.19"
once_cell = "1.5.2"
dotenv = "0.15.0"
mysql = "20.0.1"