[package]
name = "revo-graph"
version = "0.1.0"
authors = ["Jordyn <jordyn@husk.pro>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"
actix-cors = "0.5"
chrono = "0.4.19"
once_cell = "1.5.2"
dotenv = "0.15.0"
mysql = "20.0.1"
r2d2 = "0.8.9"
failure = "0.1.8"
env_logger = "0.8"

[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version = "*"
