[package]
name = "revo-poller"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = { version = "0.10.0", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
reqwest = "0.11"
dotenv = "0.15.0"